--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ nav .btn-primary:hover{
     border-radius:2px solid rgb(0, 71, 0);
 }
 
-.btn-info {
+.btn-info, .btn-primary{
     background-color: #AC8EFA;
     border-color: #AC8EFA;
     color: white;
@@ -131,4 +131,11 @@ nav .btn-primary:hover{
 }
 .date{
     color: #6a52a8;
+}
+
+.invalid-feedback{
+    color: #6a52a8 !important;
+}
+.valid-feedback{
+    color:#AC8EFA !important;
 }
